<resources>
    <string name="app_name">Collegegram</string>
    <string name="act_main_btnStart">GET STARTED</string>
    <string name="act_loginPage_txtEmail">Email Address</string>
    <string name="act_loginPage_txtPassword">Password</string>
    <string name="act_loginPage_btnLogin">LOGIN</string>
    <string name="act_loginPage_txtForgotPass">Forgot Your Password?</string>
    <string name="act_loginPage_txtNoAccount">Does Not Have An Account Yet?</string>
    <string name="act_loginPage_txtAdminLog">Admin Login</string>
    <string name="act_forum_txtStudentFeed">Student Feed</string>
    <string name="act_forum_imgUser">imgUser</string>
    <string name="act_forum_imgAddCom">imgAddCom</string>
    <string name="act_createAccount_txtCreateAccount">Create an account</string>
    <string name="act_createAccount_rdbtnStudent">Student</string>
    <string name="act_createAccount_rdbtnStaff">Staff</string>
    <string name="act_createAccount_txtEmailRegister">Email Address</string>
    <string name="act_createAccount_txtPassRegister">Password</string>
    <string name="act_createAccount_txtBoxFName">Given Name</string>
    <string name="act_createAccount_txtBoxLName">Last Name</string>
    <string name="act_createAccount_txtBoxDate">Date of Birth</string>
    <string name="act_createAccount_txtBoxProgram">Program</string>
    <string name="act_createAccount_btnRegister">REGISTER</string>
    <string name="act_controlPanel_txtAdminCP">Admin Control Panel</string>
    <string name="act_controlPanel_btnMsgAdmin">INCOMING MSG</string>
    <string name="act_controlPanel_btnPostAdmin">NEW POST</string>
    <string name="act_controlPanel_btnUserAdmin">CONTROL USERS</string>
    <string name="act_controlPanel_txtLogOut">LOGOUT</string>
    <string name="act_adminSU_txtAdminSearchedUser">Admin Searched User</string>
    <string name="act_adminNewPost_txtAdminMsg">Message</string>
    <string name="act_adminNewPost_txtAdminNP">Admin New Post</string>
    <string name="act_adminNewPost_imgAdmin">adminImg</string>
    <string name="act_adminNewPost_btnAdminPost">POST</string>
    <string name="act_adminNewPost_btnCancel">CANCEL</string>
    <string name="act_adminIncomMSG_txtAdminControlPost">Admin Control Post</string>
    <string name="act_adminControlUser_txtAdminCU">Admin Control User</string>
    <string name="act_adminControlUser_rdbtnEmail">Email</string>
    <string name="act_adminControlUser_rdbtnName">Name</string>
    <string name="act_adminControlUser_txtSearchBoxAdmin">Email or Name</string>
    <string name="act_adminControlUser_btnSearch">SEARCH</string>
    <string name="act_AddComment_txtCreateNP">Create New Post</string>
    <string name="act_addComment_txtAdminMSG">What\'s on your mind?</string>
    <string name="act_addComment_AdminImg">img</string>
    <string name="act_addComment_btnAdminPost">POST</string>
    <string name="act_addComment_btnCancel">CANCEL</string>
    <string name="add_post">Add post</string>
    <string name="posts">Posts</string>
    <string name="updatePost">Update Post</string>
    <string name="users">Users</string>
    <string name="add_user">Add User</string>
    <string name="like_unlike">Like unlike</string>
    <string name="posted_by">Posted By</string>
</resources>