<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4CAC8"
    tools:context=".AddComment">

    <TextView
        android:id="@+id/txtCreatNP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="9dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/act_AddComment_txtCreateNP"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="#F1EAE8"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_post"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/adminImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtCreatNP"
        app:layout_constraintTop_toBottomOf="@+id/txtCreatNP"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/adminImg"
        android:layout_width="52dp"
        android:layout_height="45dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/act_addComment_AdminImg"
        app:layout_constraintStart_toStartOf="@+id/msg"
        app:layout_constraintTop_toBottomOf="@+id/msg"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/act_addComment_AdminImg"
        app:layout_constraintBottom_toTopOf="@+id/btnAdminCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/msg"
        app:layout_constraintTop_toBottomOf="@+id/adminImg"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnAdminPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:backgroundTint="#6C815B"
        android:text="@string/act_addComment_btnAdminPost"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAdminCancel"
        app:layout_constraintEnd_toStartOf="@+id/btnAdminCancel"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnAdminCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#6C815B"
        android:onClick="cancelBtn"
        android:text="@string/act_addComment_btnCancel"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAdminPost"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>